fixed download link overflowing

--- a/src/components/common/Card/card.module.scss
+++ b/src/components/common/Card/card.module.scss
@@ -324,6 +324,9 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        a {
+          color: $blue;
+        }
         > i {
           margin-left: 4px;
         }
@@ -333,7 +336,7 @@
         }
         > :last-child {
           .noBreak {
-            // white-space: nowrap;
+            white-space: nowrap;
           }
         }
       }
